# qubit-forge

./: .gitignore  CMakeLists.txt  README.md  run_100k_eval.py  run_code_types.py  run_comprehensive_eval.py  run_d7_p015.py  run_final_eval.py  run_mixed_noise.py
bench/: circuit_bench.py  mi300x_env.py  quantum_volume.py  rcs_bench.py  run_all.py  scaling.py  single_gate.py
bench/results/: circuit_bench.txt  final_nt_benchmark.txt  qv_bench.txt  rcs_bench.txt  scaling.txt  single_gate.txt
decoder/bench/: latency_bench.py  ler_bench.py  paper_analysis.py
decoder/bench/results/: 100k_eval.txt  ablation.txt  code_types.txt  comprehensive_eval.json  comprehensive_eval_raw.txt  d7_mixed_training.txt  d7_muon_p007_training.txt  d7_p015_training.txt  final_eval.json  final_eval.txt  inference_latency.txt  ler_benchmark.txt  overnight_training.txt  paper_analysis.txt
decoder/include/decoder/: types.h  union_find.h
decoder/python/: bp_decoder.py  pydecoder.cpp  stim_interface.py  union_find_py.py
decoder/src/: types.cpp  union_find.cpp
decoder/tests/: test_bp.py  test_cpp_decoder.py  test_data_pipeline.py  test_neural_model.py  test_stim_interface.py  test_union_find.py
decoder/train/: data.py  evaluate.py  model.py  train.py
decoder/train/checkpoints/: best_model.pt  d3_20k_log.txt  d3_training_log.txt  final_model.pt
decoder/train/checkpoints/ablation_nocurriculum_d5/: best_model.pt
decoder/train/checkpoints/ablation_stdconv_d5/: best_model.pt
decoder/train/checkpoints/d5/: best_model.pt  final_model.pt
decoder/train/checkpoints/d5_gpu/: best_model.pt
decoder/train/checkpoints/d5_muon/: best_model.pt
decoder/train/checkpoints/d7_final/: best_model.pt
decoder/train/checkpoints/d7_gpu/: best_model.pt
decoder/train/checkpoints/d7_mixed/: best_model.pt
decoder/train/checkpoints/d7_p01/: best_model.pt
decoder/train/checkpoints/d7_p015/: best_model.pt
docs/: PROJECT_JOURNEY.md
docs/superpowers/plans/: 2026-04-10-statevec-simulator.md  2026-04-12-decoder-remaining.md  2026-04-12-neural-decoder.md  2026-04-12-qec-decoder-phase1.md
docs/superpowers/specs/: 2026-04-10-statevec-simulator-design.md  2026-04-12-qec-decoder-design.md
include/quantum/: circuit.h  fusion.h  gates.h  kernels.h  noise.h  statevec.h  types.h
paper/: pathfinder.md
python/: pyquantum.cpp
src/: circuit.hip  fusion.cpp  noise.hip  statevec.hip
src/kernels/: diagonal.hip  measure.hip  single_qubit.hip  two_qubit.hip
tests/: test_gates.py  test_statevec.cpp
